footer jump fixed

--- a/goblinTrade/styles/buttonUp.css
+++ b/goblinTrade/styles/buttonUp.css
@@ -7,7 +7,6 @@
 	align-self: center;
 	position: fixed;
 	left: 10px;
-	/* top: 60vh; */
 	bottom: 10px;
 	z-index: 1500;
 	visibility: hidden;
@@ -35,9 +34,9 @@
 	/* -webkit-animation-play-state:paused;
   -moz-animation-play-state:paused;
   animation-play-state:paused; */
-	color: rgba(255, 91, 56, 1);
+	/* color: rgba(255, 91, 56, 1); */
 	cursor: pointer;
-	opacity: 1;
+	/* opacity: 1; */
 }
 .buttonUpShow{
 visibility: visible;
