--- a/goblinTrade/styles/footer.css
+++ b/goblinTrade/styles/footer.css
@@ -8,6 +8,7 @@
 	grid-template-rows: 100px 1fr 60px 20px;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 2px;
+	overflow: hidden;
 }
 .footerBG{
 	width: 100%;
