--- a/goblinTrade/styles/slider.css
+++ b/goblinTrade/styles/slider.css
@@ -8,6 +8,7 @@
 	grid-template-columns: 10% 80% 10%;
 	margin-left: auto;
 	margin-right: auto;
+	overflow: hidden;
 }
 .arrowLeft{
 	width: 100%;
